# 3dEngine

./: CMakeLists.txt  Config.cpp  Config.h  Object.cpp  Object.h  ProgressBar.cpp  ProgressBar.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  TriangleMesh.cpp  TriangleMesh.h  Vector.cpp  Vector.h  main.cpp  params.cfg  stb_all.h
objects/Cobalion/: Cobalion.mtl
objects/Diancie/: Diancie.mtl
